package game.models.card;

import lombok.AllArgsConstructor;

public class CardMonster extends CardBase {
    CardMonster(){ super(); }
}
