package game.models.card;

public class CardSpell extends CardBase {
    CardSpell() { super(); }
}