package game.utils;

public enum AttackModifier {
    EFFECTIVE,
    NOT_EFFECTIVE,
    NO_EFFECT
}
