package game.utils;

public enum BattleResult {
    WIN,
    LOSE,
    DRAW
}
