package game.utils;

public enum Element {
    FIRE,
    WATER,
    NORMAL
}
